--- a/ejemplo-item-dev.properties
+++ b/ejemplo-item-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=German
-configuracion.autor.email=desarrolloti27@gmail.com
+configuracion.texto=Configurando ambiente Developer
+configuracion.autor.nombre=GGGF
+configuracion.autor.email=gggf@gmail.com
